# Chess-game

./: .gitignore  CMakeLists.txt  ChessBoardState.cpp  ChessBoardState.h  ChessGame.cpp  ChessPiece.cpp  ChessPiece.h  README.md  SFMLChessGame.cpp  SFMLChessGame.h  chess.cpp  chess.h  main.cpp  t003.csv
hw042 - function - drawing shapes (SFML)/: CMakeLists.txt  p42.csv  p42_original.csv  shape.cpp  shape.h  shape_main.cpp
t001/: chess.cpp  chess.h  chess_main.cpp  t001.csv  t001_original.csv
t002/: ChessBoardState.cpp  t002.csv
